--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css
 
 <body>
     <div class="container">
-        <form class="form">
+        <form class="form"><h1>Login</h1>
             <div class="username"> <label class="name">Username</label>
-                <input type="text" placeholder="Enter Your Name" required class="name-box">
+                <input type="text" placeholder="Username" required class="name-box">
 
                 <i class="fa-solid fa-user"></i>
             </div>
             <div class="password"><label class="pass">Password</label>
                 <input type="password" placeholder="Password" required class="pass-box"><i class="fa-solid fa-lock"></i>
             </div>
-            <div class="check-box"><input type="checkbox" class="box">
-                <label aria-required="false" class="remainder">Remainder me</label>
+            <div class="check-box">
+                <label aria-required="false" class="remainder"><input type="checkbox" class="box">Remainder me</label>
                 <a href="#">Forget password ?</a>
             </div>
             <div class="submit">
